--- a/Awwards/templates/awwards/project.html
+++ b/Awwards/templates/awwards/project.html
@@ -59,11 +59,23 @@
             </div>
             <div >
                 <h3 style="font-weight: bold;">Average Rating score:</h3>
-                <p>Design: </p>
-                <p>Content: </p>
-                <p>Usability: </p>
+                <p class="text-dark">Design: </p>
+                <p class="text-dark">Content: </p>
+                <p class="text-dark">Usability: </p>
             </div>
-   
+            <form action="" method="POST"> 
+                {%csrf_token%}
+                {{form}}
+                <input type="submit" value="submit">
+            </form>
+            <div>
+                {% for rating in ratings %}
+                <span> design={{rating.design}}</span>
+                <span> content={{rating.content}}</span>
+                <span> usability={{rating.usability}}</span>
+                <span> user={{rating.user.username}}</span>
+                {%endfor%}
+            </div>
         </div>
     </div>
 </div>
