--- a/Awwards/templates/awwards/project.html
+++ b/Awwards/templates/awwards/project.html
@@ -25,6 +25,7 @@
                 <p class="text-dark">Content: </p>
                 <p class="text-dark">Usability: </p>
             </div> -->
+            <h1>Please Rate the Project using this form</h1>
             <form action="" method="POST"> 
                 {%csrf_token%}
                 {{form}}
